Fix deployment workflows - add package parameter

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -28,3 +28,4 @@ jobs:
       with:
         app-name: 'elevenseven-backend-dev'
         publish-profile: ${{ secrets.AZURE_DEV_PUBLISH_PROFILE }}
+        package: .
