--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -23,9 +23,16 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     
+    - name: Create deployment package
+      run: |
+        mkdir -p deploy
+        cp -r . deploy/ || true
+        cd deploy
+        rm -rf .git venv node_modules frontend/node_modules __pycache__ *.pyc .env || true
+    
     - name: Deploy to Azure Web App (dev)
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'elevenseven-backend-dev'
         publish-profile: ${{ secrets.AZURE_DEV_PUBLISH_PROFILE }}
-        package: .
+        package: './deploy'
