--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -36,3 +36,4 @@ jobs:
         app-name: 'elevenseven-backend-dev'
         publish-profile: ${{ secrets.AZURE_DEV_PUBLISH_PROFILE }}
         package: './deploy'
+        startup-command: 'python -m uvicorn app:app --host 0.0.0.0 --port 8000'
