--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,9 +1,9 @@
-name: Deploy to Azure Prod App
+name: Deploy to Azure Prod
 
 on:
   push:
     branches:
-      - prod
+      - main
 
 jobs:
   deploy:
@@ -13,36 +13,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
     
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    
-    - name: Create deployment package
-      run: |
-        mkdir -p deploy
-        cp -r . deploy/ || true
-        cd deploy
-        rm -rf .git venv node_modules frontend/node_modules __pycache__ *.pyc .env || true
-        zip -r ../deploy.zip . -x "*.git*" "*.pyc" "__pycache__/*"
-    
     - name: Azure Login
       uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        creds: ${ secrets.AZURE_CREDENTIALS }
     
-    - name: Install Azure CLI
-      run: |
-        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-    
-    - name: Deploy to Azure Web App (prod)
-      run: |
-        az webapp deployment source config-zip \
-          --resource-group elevenseven-rg \
-          --name elevenseven-backend-prod \
-          --src deploy.zip
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'novseven-backend'
+        package: '.'
