--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Azure Login
       uses: azure/login@v1
       with:
-        creds: ${ secrets.AZURE_CREDENTIALS }
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
     
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
